x overflow issue resolved in first section

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -43,11 +43,6 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-/* .cards-overlay {
-  box-shadow: inset 89px 0px 48px -22px rgba(0, 0, 0, 0.4),
-    inset -100px 0px 48px -27px rgba(0, 0, 0, 0.7);
-} */
-
 .cards-overlay::after {
   content: "";
   position: absolute;
